feat: create app background job + event loop (#2161)
* kickoff apps event loop

* update org hooks

* update app model to add status

* update

* chore: remove noisy middleware debug logs

* chore: initialize apps

* updates

* fix local env

* update logic to add app

* fixes and getting app workers running

* fix: get app event loop properly working

* cleanup seed script

* fix: bug where fresh db integration fails
